Correct 16x16 grid to be properly squared and aligned

--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .container {
+  height: 600px;
+  width: 600px;
+  border: 2px solid black;
   display: flex;
   flex-direction: column;
-  max-height: 5px;
 }
